fix: reduce cart model into just buyer id
